--- a/src/_box-shadow.css
+++ b/src/_box-shadow.css
@@ -4,7 +4,21 @@
 .shadow-3 { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
 
 
-					@media screen and (min-width: 48em) and (max-width: 64em) {
+					@media screen and (min-width: 20em) {
+						.shadow-1-s { box-shadow: 0px 0px 5px 0px rgba( 31, 46, 95, 0.08 ); }
+.shadow-2-s { box-shadow: 0px 0px 10px 2px rgba( 31, 46, 95, 0.08 ); }
+.shadow-3-s { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
+					}
+				
+
+					@media screen and (min-width: 40em) {
+						.shadow-1-ns { box-shadow: 0px 0px 5px 0px rgba( 31, 46, 95, 0.08 ); }
+.shadow-2-ns { box-shadow: 0px 0px 10px 2px rgba( 31, 46, 95, 0.08 ); }
+.shadow-3-ns { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
+					}
+				
+
+					@media screen and (min-width: 40em) {
 						.shadow-1-m { box-shadow: 0px 0px 5px 0px rgba( 31, 46, 95, 0.08 ); }
 .shadow-2-m { box-shadow: 0px 0px 10px 2px rgba( 31, 46, 95, 0.08 ); }
 .shadow-3-m { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
@@ -15,5 +29,12 @@
 						.shadow-1-l { box-shadow: 0px 0px 5px 0px rgba( 31, 46, 95, 0.08 ); }
 .shadow-2-l { box-shadow: 0px 0px 10px 2px rgba( 31, 46, 95, 0.08 ); }
 .shadow-3-l { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
+					}
+				
+
+					@media screen and (min-width: 80em) {
+						.shadow-1-xl { box-shadow: 0px 0px 5px 0px rgba( 31, 46, 95, 0.08 ); }
+.shadow-2-xl { box-shadow: 0px 0px 10px 2px rgba( 31, 46, 95, 0.08 ); }
+.shadow-3-xl { box-shadow: -5px 0px 30px 0px rgba( 31, 46, 95, 0.08 ); }
 					}
 				
