--- a/src/_heights.css
+++ b/src/_heights.css
@@ -37,8 +37,11 @@
     -inherit = string value of inherit
 
   Media Query Extensions:
-    -m  = 48em
+    -s  = 20em
+    -ns  = 40em
+    -m  = 40em
     -l  = 64em
+    -xl  = 80em
 
 */
 .g-h1 { height: 0.25rem; }
@@ -58,7 +61,47 @@
 .g-h15 { height: 13.75rem; }
 .g-h16 { height: 16rem; }
 
-					@media screen and (min-width: 48em) and (max-width: 64em) {
+					@media screen and (min-width: 20em) {
+						.g-h1-s { height: 0.25rem; }
+.g-h2-s { height: 0.5rem; }
+.g-h3-s { height: 0.75rem; }
+.g-h4-s { height: 1rem; }
+.g-h5-s { height: 1.25rem; }
+.g-h6-s { height: 1.5rem; }
+.g-h7-s { height: 1.75rem; }
+.g-h8-s { height: 2rem; }
+.g-h9-s { height: 2.25rem; }
+.g-h10-s { height: 2.5rem; }
+.g-h11-s { height: 3rem; }
+.g-h12-s { height: 4rem; }
+.g-h13-s { height: 5rem; }
+.g-h14-s { height: 8rem; }
+.g-h15-s { height: 13.75rem; }
+.g-h16-s { height: 16rem; }
+					}
+				
+
+					@media screen and (min-width: 40em) {
+						.g-h1-ns { height: 0.25rem; }
+.g-h2-ns { height: 0.5rem; }
+.g-h3-ns { height: 0.75rem; }
+.g-h4-ns { height: 1rem; }
+.g-h5-ns { height: 1.25rem; }
+.g-h6-ns { height: 1.5rem; }
+.g-h7-ns { height: 1.75rem; }
+.g-h8-ns { height: 2rem; }
+.g-h9-ns { height: 2.25rem; }
+.g-h10-ns { height: 2.5rem; }
+.g-h11-ns { height: 3rem; }
+.g-h12-ns { height: 4rem; }
+.g-h13-ns { height: 5rem; }
+.g-h14-ns { height: 8rem; }
+.g-h15-ns { height: 13.75rem; }
+.g-h16-ns { height: 16rem; }
+					}
+				
+
+					@media screen and (min-width: 40em) {
 						.g-h1-m { height: 0.25rem; }
 .g-h2-m { height: 0.5rem; }
 .g-h3-m { height: 0.75rem; }
@@ -95,5 +138,25 @@
 .g-h14-l { height: 8rem; }
 .g-h15-l { height: 13.75rem; }
 .g-h16-l { height: 16rem; }
+					}
+				
+
+					@media screen and (min-width: 80em) {
+						.g-h1-xl { height: 0.25rem; }
+.g-h2-xl { height: 0.5rem; }
+.g-h3-xl { height: 0.75rem; }
+.g-h4-xl { height: 1rem; }
+.g-h5-xl { height: 1.25rem; }
+.g-h6-xl { height: 1.5rem; }
+.g-h7-xl { height: 1.75rem; }
+.g-h8-xl { height: 2rem; }
+.g-h9-xl { height: 2.25rem; }
+.g-h10-xl { height: 2.5rem; }
+.g-h11-xl { height: 3rem; }
+.g-h12-xl { height: 4rem; }
+.g-h13-xl { height: 5rem; }
+.g-h14-xl { height: 8rem; }
+.g-h15-xl { height: 13.75rem; }
+.g-h16-xl { height: 16rem; }
 					}
 				
