--- a/src/_max-widths.css
+++ b/src/_max-widths.css
@@ -22,8 +22,11 @@
     -none  = string value none
 
   Media Query Extensions:
-    -m  = 48em
+    -s  = 20em
+    -ns  = 40em
+    -m  = 40em
     -l  = 64em
+    -xl  = 80em
 */
 
 .g-mw1 { max-width: 1rem; }
@@ -36,7 +39,33 @@
 .g-mw8 { max-width: 64rem; }
 .g-mw9 { max-width: 96rem; }
 
-					@media screen and (min-width: 48em) and (max-width: 64em) {
+					@media screen and (min-width: 20em) {
+						.g-mw1-s { max-width: 1rem; }
+.g-mw2-s { max-width: 2rem; }
+.g-mw3-s { max-width: 4rem; }
+.g-mw4-s { max-width: 8rem; }
+.g-mw5-s { max-width: 16rem; }
+.g-mw6-s { max-width: 32rem; }
+.g-mw7-s { max-width: 48rem; }
+.g-mw8-s { max-width: 64rem; }
+.g-mw9-s { max-width: 96rem; }
+					}
+				
+
+					@media screen and (min-width: 40em) {
+						.g-mw1-ns { max-width: 1rem; }
+.g-mw2-ns { max-width: 2rem; }
+.g-mw3-ns { max-width: 4rem; }
+.g-mw4-ns { max-width: 8rem; }
+.g-mw5-ns { max-width: 16rem; }
+.g-mw6-ns { max-width: 32rem; }
+.g-mw7-ns { max-width: 48rem; }
+.g-mw8-ns { max-width: 64rem; }
+.g-mw9-ns { max-width: 96rem; }
+					}
+				
+
+					@media screen and (min-width: 40em) {
 						.g-mw1-m { max-width: 1rem; }
 .g-mw2-m { max-width: 2rem; }
 .g-mw3-m { max-width: 4rem; }
@@ -59,5 +88,18 @@
 .g-mw7-l { max-width: 48rem; }
 .g-mw8-l { max-width: 64rem; }
 .g-mw9-l { max-width: 96rem; }
+					}
+				
+
+					@media screen and (min-width: 80em) {
+						.g-mw1-xl { max-width: 1rem; }
+.g-mw2-xl { max-width: 2rem; }
+.g-mw3-xl { max-width: 4rem; }
+.g-mw4-xl { max-width: 8rem; }
+.g-mw5-xl { max-width: 16rem; }
+.g-mw6-xl { max-width: 32rem; }
+.g-mw7-xl { max-width: 48rem; }
+.g-mw8-xl { max-width: 64rem; }
+.g-mw9-xl { max-width: 96rem; }
 					}
 				
