--- a/src/_type-scale.css
+++ b/src/_type-scale.css
@@ -18,8 +18,11 @@
     9 = 9th step in size scale
 
   Media Query Extensions:
-    -m  = 48em
+    -s  = 20em
+    -ns  = 40em
+    -m  = 40em
     -l  = 64em
+    -xl  = 80em
 */
 .g-f1 { font-size: 0.75rem; }
 .g-f2 { font-size: 0.875rem; }
@@ -31,7 +34,33 @@
 .g-f8 { font-size: 2.5rem; }
 .g-f9 { font-size: 5rem; }
 
-					@media screen and (min-width: 48em) and (max-width: 64em) {
+					@media screen and (min-width: 20em) {
+						.g-f1-s { font-size: 0.75rem; }
+.g-f2-s { font-size: 0.875rem; }
+.g-f3-s { font-size: 1rem; }
+.g-f4-s { font-size: 1.25rem; }
+.g-f5-s { font-size: 1.5rem; }
+.g-f6-s { font-size: 2rem; }
+.g-f7-s { font-size: 2.25rem; }
+.g-f8-s { font-size: 2.5rem; }
+.g-f9-s { font-size: 5rem; }
+					}
+				
+
+					@media screen and (min-width: 40em) {
+						.g-f1-ns { font-size: 0.75rem; }
+.g-f2-ns { font-size: 0.875rem; }
+.g-f3-ns { font-size: 1rem; }
+.g-f4-ns { font-size: 1.25rem; }
+.g-f5-ns { font-size: 1.5rem; }
+.g-f6-ns { font-size: 2rem; }
+.g-f7-ns { font-size: 2.25rem; }
+.g-f8-ns { font-size: 2.5rem; }
+.g-f9-ns { font-size: 5rem; }
+					}
+				
+
+					@media screen and (min-width: 40em) {
 						.g-f1-m { font-size: 0.75rem; }
 .g-f2-m { font-size: 0.875rem; }
 .g-f3-m { font-size: 1rem; }
@@ -54,5 +83,18 @@
 .g-f7-l { font-size: 2.25rem; }
 .g-f8-l { font-size: 2.5rem; }
 .g-f9-l { font-size: 5rem; }
+					}
+				
+
+					@media screen and (min-width: 80em) {
+						.g-f1-xl { font-size: 0.75rem; }
+.g-f2-xl { font-size: 0.875rem; }
+.g-f3-xl { font-size: 1rem; }
+.g-f4-xl { font-size: 1.25rem; }
+.g-f5-xl { font-size: 1.5rem; }
+.g-f6-xl { font-size: 2rem; }
+.g-f7-xl { font-size: 2.25rem; }
+.g-f8-xl { font-size: 2.5rem; }
+.g-f9-xl { font-size: 5rem; }
 					}
 				
