--- a/src/_widths.css
+++ b/src/_widths.css
@@ -48,8 +48,11 @@
     -auto       = string value auto
 
   Media Query Extensions:
-    -m  = 48em
+    -s  = 20em
+    -ns  = 40em
+    -m  = 40em
     -l  = 64em
+    -xl  = 80em
 
 */
 .g-w1 { width: 0.25rem; }
@@ -71,7 +74,51 @@
 .w-15 {  width:  15%; }
 .w-85 {  width:  85%; }
 
-					@media screen and (min-width: 48em) and (max-width: 64em) {
+					@media screen and (min-width: 20em) {
+						.g-w1-s { width: 0.25rem; }
+.g-w2-s { width: 0.5rem; }
+.g-w3-s { width: 0.75rem; }
+.g-w4-s { width: 1rem; }
+.g-w5-s { width: 1.25rem; }
+.g-w6-s { width: 1.5rem; }
+.g-w7-s { width: 1.75rem; }
+.g-w8-s { width: 2rem; }
+.g-w9-s { width: 2.25rem; }
+.g-w10-s { width: 2.5rem; }
+.g-w11-s { width: 3rem; }
+.g-w12-s { width: 4rem; }
+.g-w13-s { width: 5rem; }
+.g-w14-s { width: 8rem; }
+.g-w15-s { width: 13.75rem; }
+.g-w16-s { width: 16rem; }
+.w-15-s {  width:  15%; }
+.w-85-s {  width:  85%; }
+					}
+				
+
+					@media screen and (min-width: 40em) {
+						.g-w1-ns { width: 0.25rem; }
+.g-w2-ns { width: 0.5rem; }
+.g-w3-ns { width: 0.75rem; }
+.g-w4-ns { width: 1rem; }
+.g-w5-ns { width: 1.25rem; }
+.g-w6-ns { width: 1.5rem; }
+.g-w7-ns { width: 1.75rem; }
+.g-w8-ns { width: 2rem; }
+.g-w9-ns { width: 2.25rem; }
+.g-w10-ns { width: 2.5rem; }
+.g-w11-ns { width: 3rem; }
+.g-w12-ns { width: 4rem; }
+.g-w13-ns { width: 5rem; }
+.g-w14-ns { width: 8rem; }
+.g-w15-ns { width: 13.75rem; }
+.g-w16-ns { width: 16rem; }
+.w-15-ns {  width:  15%; }
+.w-85-ns {  width:  85%; }
+					}
+				
+
+					@media screen and (min-width: 40em) {
 						.g-w1-m { width: 0.25rem; }
 .g-w2-m { width: 0.5rem; }
 .g-w3-m { width: 0.75rem; }
@@ -112,5 +159,27 @@
 .g-w16-l { width: 16rem; }
 .w-15-l {  width:  15%; }
 .w-85-l {  width:  85%; }
+					}
+				
+
+					@media screen and (min-width: 80em) {
+						.g-w1-xl { width: 0.25rem; }
+.g-w2-xl { width: 0.5rem; }
+.g-w3-xl { width: 0.75rem; }
+.g-w4-xl { width: 1rem; }
+.g-w5-xl { width: 1.25rem; }
+.g-w6-xl { width: 1.5rem; }
+.g-w7-xl { width: 1.75rem; }
+.g-w8-xl { width: 2rem; }
+.g-w9-xl { width: 2.25rem; }
+.g-w10-xl { width: 2.5rem; }
+.g-w11-xl { width: 3rem; }
+.g-w12-xl { width: 4rem; }
+.g-w13-xl { width: 5rem; }
+.g-w14-xl { width: 8rem; }
+.g-w15-xl { width: 13.75rem; }
+.g-w16-xl { width: 16rem; }
+.w-15-xl {  width:  15%; }
+.w-85-xl {  width:  85%; }
 					}
 				
