--- a/src/_colors.css
+++ b/src/_colors.css
@@ -30,9 +30,9 @@
 --on-danger: #FFFFFF;
 --on-warning: #FFFFFF;
 --on-inverted: #FFFFFF;
---on-base-3: #CCD1D6;
---on-base-2: #8BA3AA;
---on-base: #14282E;
+--on-base-3: #ccd1d6;
+--on-base-2: #a1a6ad;
+--on-base: #142032;
 --black: #000000;
 --white: #ffffff;
 --danger-light-10: rgba(254,243,245,.10);
