--- a/src/_colors.css
+++ b/src/_colors.css
@@ -4,35 +4,35 @@
 --base-2: #F9FAFC;
 --base-3: #EDEFF2;
 --base-4: #E1E4E7;
---base-inverted-1: #142032;
---base-inverted-2: #7F8494;
---base-inverted-3: #A9ACB7;
+--base-inverted-1: #192621;
+--base-inverted-2: #a3a8a6;
+--base-inverted-3: #d1d4d3;
 --base-inverted-4: #F6F7F8;
---base-inverted-5: #2E3E47;
---primary-light: #f8f8ff;
---primary: #7680ff;
---primary-dark: #5e66cc;
---primary-bold: #474d99;
+--base-inverted-5: #323D3D;
+--primary-light: #f6fcf7;
+--primary: #4eae8e;
+--primary-dark: #429479;
+--primary-bold: #377a63;
 --success-light: #f6fcf7;
---success: #55c469;
---success-dark: #449d54;
---success-bold: #33763f;
---danger-light: #fef3f5;
---danger: #f71940;
---danger-dark: #b91330;
---danger-bold: #7c0d20;
---warning-light: #FFFBF6;
---warning: #FFBA57;
---warning-dark: #BF8C41;
---warning-bold: #805D2C;
+--success: #4eae8e;
+--success-dark: #429479;
+--success-bold: #377a63;
+--danger-light: #fdf6f5;
+--danger: #e54c3c;
+--danger-dark: #b73d30;
+--danger-bold: #953127;
+--warning-light: #fefbf2;
+--warning: #f8be00;
+--warning-dark: #dfab00;
+--warning-bold: #c69800;
 --on-primary: #FFFFFF;
 --on-success: #FFFFFF;
 --on-danger: #FFFFFF;
 --on-warning: #FFFFFF;
 --on-inverted: #FFFFFF;
---on-base-3: #ccd1d6;
---on-base-2: #a1a6ad;
---on-base: #142032;
+--on-base-3: #d1d4d3;
+--on-base-2: #a3a8a6;
+--on-base: #192621;
 --black: #000000;
 --white: #ffffff;
 --danger-light-10: rgba(254,243,245,.10);
