--- a/tachyons.css
+++ b/tachyons.css
@@ -1119,6 +1119,7 @@ code, .code { font-family: Consolas, monaco, monospace; }
     7 = 7th step in width scale
     8 = 8th step in width scale
     9 = 9th step in width scale
+    10 = 10th step in width scale
 
     -100 = literal value 100%
 
@@ -1139,7 +1140,8 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .g-mw6 { max-width: 32rem; }
 .g-mw7 { max-width: 48rem; }
 .g-mw8 { max-width: 64rem; }
-.g-mw9 { max-width: 96rem; }
+.g-mw9 { max-width: 74.18rem; }
+.g-mw10 { max-width: 96rem; }
 /*
 
   OPACITY
@@ -1742,7 +1744,8 @@ code, .code { font-family: Consolas, monaco, monospace; }
  .g-mw6-s { max-width: 32rem; }
  .g-mw7-s { max-width: 48rem; }
  .g-mw8-s { max-width: 64rem; }
- .g-mw9-s { max-width: 96rem; }
+ .g-mw9-s { max-width: 74.18rem; }
+ .g-mw10-s { max-width: 96rem; }
  .g-o-100-s { opacity: 1; }
  .g-o-90-s { opacity: .9; }
  .g-o-80-s { opacity: .8; }
@@ -2544,7 +2547,8 @@ code, .code { font-family: Consolas, monaco, monospace; }
  .g-mw6-ns { max-width: 32rem; }
  .g-mw7-ns { max-width: 48rem; }
  .g-mw8-ns { max-width: 64rem; }
- .g-mw9-ns { max-width: 96rem; }
+ .g-mw9-ns { max-width: 74.18rem; }
+ .g-mw10-ns { max-width: 96rem; }
  .g-mw1-m { max-width: 1rem; }
  .g-mw2-m { max-width: 2rem; }
  .g-mw3-m { max-width: 4rem; }
@@ -2553,7 +2557,8 @@ code, .code { font-family: Consolas, monaco, monospace; }
  .g-mw6-m { max-width: 32rem; }
  .g-mw7-m { max-width: 48rem; }
  .g-mw8-m { max-width: 64rem; }
- .g-mw9-m { max-width: 96rem; }
+ .g-mw9-m { max-width: 74.18rem; }
+ .g-mw10-m { max-width: 96rem; }
  .g-o-100-ns { opacity: 1; }
  .g-o-90-ns { opacity: .9; }
  .g-o-80-ns { opacity: .8; }
@@ -3018,7 +3023,8 @@ code, .code { font-family: Consolas, monaco, monospace; }
  .g-mw6-l { max-width: 32rem; }
  .g-mw7-l { max-width: 48rem; }
  .g-mw8-l { max-width: 64rem; }
- .g-mw9-l { max-width: 96rem; }
+ .g-mw9-l { max-width: 74.18rem; }
+ .g-mw10-l { max-width: 96rem; }
  .g-o-100-l { opacity: 1; }
  .g-o-90-l { opacity: .9; }
  .g-o-80-l { opacity: .8; }
@@ -3444,7 +3450,8 @@ code, .code { font-family: Consolas, monaco, monospace; }
  .g-mw6-xl { max-width: 32rem; }
  .g-mw7-xl { max-width: 48rem; }
  .g-mw8-xl { max-width: 64rem; }
- .g-mw9-xl { max-width: 96rem; }
+ .g-mw9-xl { max-width: 74.18rem; }
+ .g-mw10-xl { max-width: 96rem; }
  .g-o-100-xl { opacity: 1; }
  .g-o-90-xl { opacity: .9; }
  .g-o-80-xl { opacity: .8; }
