Fix input color

--- a/src/_colors.css
+++ b/src/_colors.css
@@ -8,7 +8,7 @@
 --base-inverted-2: #A1A6AD;
 --base-inverted-3: #E8E9EB;
 --base-inverted-4: #F8F8F9;
---base-inverted-5: #7F8494;
+--base-inverted-5: #2E384A;
 --primary-light: #F6FAFD;
 --primary: #0093E9;
 --primary-dark: #0075C9;
